--- a/pages/index.html
+++ b/pages/index.html
@@ -42,63 +42,63 @@
 
     <div class="container">
       <!-- Category -->
-      <ul class="row py-32 py-md-48 py-32 g-8 g-lg-24 list-unstyled">
+      <ul class="row  g-8 g-lg-24 list-unstyled mb-0 mt-24">
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
             <img src="/assets/images/cate01.svg" alt="演出" class="svg-icon">
-            <h3 class="noto-tc-serif fw-bold fs-24">演出</h3>
+            <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">演出</h3>
           </a>
         </li>
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
             <img src="/assets/images/cate02.svg" alt="聯誼">
-            <h3 class="noto-tc-serif fw-bold fs-24">聯誼</h3>
+            <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">聯誼</h3>
           </a>
         </li>
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
             <img src="/assets/images/cate03.svg" alt="展覽">
-            <h3 class="noto-tc-serif fw-bold fs-24">展覽</h3>
+            <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">展覽</h3>
           </a>
         </li>
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
             <img src="/assets/images/cate04.svg" alt="美食">
-            <h3 class="noto-tc-serif fw-bold fs-24">美食</h3>
+            <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">美食</h3>
           </a>
         </li>
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
             <img src="/assets/images/cate05.svg" alt="戶外">
-            <h3 class="noto-tc-serif fw-bold fs-24">戶外</h3>
+            <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">戶外</h3>
           </a>
         </li>
         <li class="col-md-2 col-4">
-          <a href="#" class="category d-flex flex-column align-items-center justify-content-center gap-12 bg-primary">
-            <h3 class="fs-48 text-secondary noto-tc-serif">探索<br>更多</h3>
+          <a href="/" class="category d-flex flex-column align-items-center justify-content-center gap-12 bg-primary hover-color-tertiary">
+            <h3 class="fs-md-48 fs-24 text-secondary noto-tc-serif hover-color-tertiary">探索<br>更多</h3>
           </a>
         </li>
       </ul>
       <!-- Category -->
 
       <!-- Recent -->
-      <div class="border border-3 border-dark d-flex justify-content-between align-items-center px-md-32 px-12 py-md-24 py-16">
+      <div class="border border-3 border-dark d-flex justify-content-between align-items-center py-md-24 py-16 px-md-32 px-12 mt-md-48 mt-32">
         <h2 class="h2-title">RECENT</h2>
         <p class="fw-bold noto-tc-serif p-info">近期活動</p>
       </div>
 
-      <div class="row py-32 gx-18 gy-48">
+      <div class="row  gx-md-18">
         <!-- col 1 -->
-        <div class="col-md-4 d-flex flex-column">
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
           <!-- 有d-flex flex-column Image 才填滿 -->
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">19 MAY 2023</h3>
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">19 MAY 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/01.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">邪典電影派對——房間</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">邪典電影派對——房間</h4>
           <p class="mb-16 flex-grow-1">你有聽說過「大災難家」裡面的主角 Tommy Wiseau
             製作的「史上最爛的電影」——房間嗎？在美國甚至演變成一種邪教、一種派對的形式，在電影播放的對著螢幕丟湯匙都...</p>
           <div class="py-12 d-flex justify-content-between  border-primary border-top border-bottom border-2">
@@ -106,7 +106,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">社群活動</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -114,10 +114,10 @@
         </div>
 
         <!-- col 2 -->
-        <div class="col-md-4 d-flex flex-column">
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">23 MAY 2023</h3>
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">23 MAY 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/02.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">怪舞俱樂部</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">怪舞俱樂部</h4>
           <p class="mb-16  flex-grow-1">覺得自己的舞蹈細胞異於常人？每次隨著音樂起舞身邊的人總是露出無法理解的表情？
             來這裡就對了！來參加這場一起跳舞的聚會，也會在每一次的舞會中選出舞步最怪的...
           </p>
@@ -126,7 +126,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">演出</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -134,10 +134,10 @@
         </div>
 
         <!-- col 3 -->
-        <div class="col-md-4 d-flex flex-column">
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">30 MAY 2023</h3>
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">30 MAY 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/03.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">哈利波特馬拉松</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">哈利波特馬拉松</h4>
           <p class="mb-16 flex-grow-1">每次身邊有人開啟哈利波特的話題，自己永遠都是聽不懂的那個麻瓜？看大家在討論魁地奇、
             用咒語鬥法的時候，自己永遠是陪笑的那個人？穿好你的法袍、帶上你的法杖...
           </p>
@@ -146,7 +146,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">聯誼</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -154,10 +154,10 @@
         </div>
 
         <!-- col 4 -->
-        <div class="col-md-4 d-flex flex-column">
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">12 June 2023</h3>
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">12 June 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/04.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">皮卡丘排球大賽</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">皮卡丘排球大賽</h4>
           <p class="mb-16 flex-grow-1">還記得小時候玩的小遊戲嗎？總是有朋友吹噓自己獨孤求敗、只求一敗？
             是時候該展現真正的實力了！本活動採用瑞士制賽程，以絕對公平的方式進行，是時候該證明自己...
           </p>
@@ -166,7 +166,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">遊戲競賽</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -174,10 +174,10 @@
         </div>
 
         <!-- col 5 -->
-        <div class="col-md-4 d-flex flex-column">
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">25 June 2023</h3>
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">25 June 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/05.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">酒精路跑</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">酒精路跑</h4>
           <p class="mb-16 flex-grow-1">身邊總是有對自己酒量有高度自信的朋友嗎？拉著他/她一起來參加酒精路跑吧！
             一起拍下第一杯直到倒下為止的照片，一起喝遍市區內各家極具品味的酒吧。
           </p>
@@ -186,7 +186,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">社群活動</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"> 
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -194,10 +194,10 @@
         </div>
 
         <!-- col 6 -->
-        <div class="col-md-4 d-flex flex-column">
-          <h3 class="fs-48 border-primary border-bottom border-3 pb-12 mb-12">9 July 2023</h3>
+        <div class="col-md-4 d-flex flex-column mt-md-32 mt-24">
+          <h3 class="fs-md-48 fs-32 border-primary border-bottom border-3 pb-12 mb-12">9 July 2023</h3>
           <img class="mb-12 recent-img img-fluid" src="/assets/images/event/06.jpg" alt="event">
-          <h3 class="mb-12 noto-tc-serif fs-24 fw-bold">展覽——我的房間</h3>
+          <h4 class="mb-md-12 mb-8 noto-tc-serif fs-md-24 fs-18 fw-bold">展覽——我的房間</h4>
           <p class="mb-16 flex-grow-1">每個人的房間總會有那麼一兩個能代表自己的物事，或許是再平凡不過的牙刷、
             馬克杯，或許有那些別人的房間從沒出現過的小東西——那些能定義自己的特別的東西。
           </p>
@@ -206,7 +206,7 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">展覽</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -217,24 +217,24 @@
       <!-- Recent -->
 
       <!-- ONLINE -->
-      <div class="border border-3 border-dark d-flex justify-content-between align-items-center px-md-32 px-12 py-md-24 py-16">
+      <div class="border border-3 border-dark d-flex justify-content-between align-items-center px-md-32 px-12 py-md-24 py-16 mt-md-60 mt-32 ">
         <h2 class="h2-title">ONLINE</h2>
         <p class="fw-bold noto-tc-serif p-info">線上活動</p>
       </div>
 
-      <div class="row mt-32">
+      <div class="row mt-md-32 mt-16">
         <div class="col-md-7 col-12">
           <div class="online-bg"></div>
         </div>
         <div class="col-md-5 col-12">
-          <h3 class="fs-32 noto-tc-serif fw-bold mb-16">切特居批踢</h3>
+          <h3 class="fs-md-32 fs-18 noto-tc-serif fw-bold mb-16">切特居批踢</h3>
           <a href="#" class="border border-1 border-primary tag text-primary fw-bold noto-tc-serif me-8">競賽</a>
           <a href="#" class="border border-1 border-primary tag text-primary fw-bold noto-tc-serif me-8">科技</a>
           <a href="#" class="border border-1 border-primary tag text-primary fw-bold noto-tc-serif me-8">有趣</a>
-          <p class="py-32">最近網路上很流行的AI程式 ChatGPT，可以用來聊天或是查詢、整理各種資料，不同的應用方式如雨後春筍般冒出來。<br>
+          <p class="py-md-32 py-12">最近網路上很流行的AI程式 ChatGPT，可以用來聊天或是查詢、整理各種資料，不同的應用方式如雨後春筍般冒出來。<br>
             這個活動讓大家把自己最有特色的使用方法提出來讓大家參考，也會投票出最有趣的用法。<br>
             該讓其他人知道自己使用 ChatGPT 的姿勢才是最特別的那個了！</p>
-          <button class="btn  w-100 btn-primary py-8 hover-text-yellow">
+          <button class="btn  w-100 btn-primary py-8 btn-submit">
             <span class="me-4 noto-tc-sans fw-bold">查看活動詳情</span>
             <i class="icofont-rounded-double-right"></i>
           </button>
@@ -244,7 +244,7 @@
     </div>
 
     <!-- Albums跑馬燈 -->
-    <div class="swiper myAlbumsSwiper mt-60">
+    <div class="swiper myAlbumsSwiper mt-md-60 mt-32">
       <div class="swiper-wrapper">
         <div class="swiper-slide noto-tc-serif">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
         <div class="swiper-slide noto-tc-serif">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
@@ -256,9 +256,9 @@
     <!-- Albums跑馬燈 -->
 
     <!-- Albums -->
-    <div class="container albums mt-32">
+    <div class="container2 albums mt-32 px-md-12 px-48 mx-auto">
       <ul class="row list-unstyled">
-        <li class="col-lg-3 col-md-6 col-12 mt-40">
+        <li class="col-lg-3 col-md-6 col-12 mt-md-40 mt-16 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
             <h2
               class="noto-tc-serif position-absolute top-0 start-50 translate-middle fs-16 bg-white px-16 py-8 fw-bold h2-transform">
@@ -267,7 +267,7 @@
               class="img-fluid w-100" alt="社群活動">
             <p class="pt-12 fw-bold fs-18 noto-tc-serif">無聲派對-閉閉嘴dancing</p>
           </div>
-        <li class="col-lg-3 col-md-6 col-12 mt-40">
+        <li class="col-lg-3 col-md-6 col-12 mt-40 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
             <h2 class="noto-tc-serif position-absolute top-0 start-50 fs-16 bg-white px-16 py-8 fw-bold h2-transform">
               藝文活動</h2>
@@ -276,7 +276,7 @@
             <p class="pt-12 fw-bold fs-18 noto-tc-serif">搶救老店大作戰</p>
           </div>
         </li>
-        <li class="col-lg-3 col-md-6 col-12 mt-40">
+        <li class="col-lg-3 col-md-6 col-12 mt-40 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
             <h2 class="noto-tc-serif position-absolute top-0 start-50 fs-16 bg-white px-16 py-8 fw-bold h2-transform">
               自我覺察</h2>
@@ -285,7 +285,7 @@
             <p class="pt-12 fw-bold fs-18 noto-tc-serif">內觀修行-部落篇</p>
           </div>
         </li>
-        <li class="col-lg-3 col-md-6 col-12 mt-40">
+        <li class="col-lg-3 col-md-6 col-12 mt-40 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
             <h2 class="noto-tc-serif position-absolute top-0 start-50 fs-16 bg-white px-16 py-8 fw-bold h2-transform">
               聯誼活動</h2>
@@ -300,7 +300,7 @@
     <!-- Albums -->
 
     <!-- Albums跑馬燈 -->
-    <div class="swiper myAlbumsSwiper mt-60">
+    <div class="swiper myAlbumsSwiper mt-md-60 mt-40">
       <div class="swiper-wrapper">
         <div class="swiper-slide noto-tc-serif">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
         <div class="swiper-slide noto-tc-serif">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
@@ -312,11 +312,11 @@
     <!-- Albums跑馬燈 -->
 
     <!-- #Follow-us-->
-    <div class="container mt-60">
+    <div class="container mt-md-60 mt-40  mx-auto">
       <div class="row g-md-0 g-24">
         <div class="col-md-6 col-12">
           <div class="follow-us border border-2 border-primary">
-            <h3 class="fs-32 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
+            <h3 class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
               #FOLLOW US</h3>
             <div class="p-32">
               <p>想第一時間獲得新奇有趣的活動資訊？<br>
@@ -347,7 +347,7 @@
         </div>
         <div class="col-md-6 col-12 d-flex flex-column justify-content-between subscribe-us">
           <div class="border border-2 border-primary flex-grow-1  pb-md-0 pb-16">
-            <h3 class="fs-32 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
+            <h3 class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
               #subscribe us</h3>
             <div class="px-32">
               <p class="noto-tc-sans py-16">
@@ -362,7 +362,7 @@
 
 
           </div>
-          <button class="btn btn-primary w-100 py-8">
+          <button class="btn btn-primary w-100 py-8 btn-submit" type="submit">
             <span class="me-4">確認訂閱</span>
             <i class="icofont-rounded-double-right"></i>
           </button>
@@ -379,9 +379,9 @@
     </div>
 
 
-    <div class="container border-top border-2 border-dark text-center mt-60 p-60">
-      <h3 class="fs-32 fw-bold mb-16 noto-tc-serif">此刻打盹，你將做夢；此刻學習，你將圓夢</h3>
-      <p class="fw-bold noto-tc-serif fs-18">——我也不知道誰說的</p>
+    <div class="container border-top border-2 border-dark text-center mt-md-60 mt-48 py-md-60 py-48">
+      <h3 class="fs-md-32 fs-18 fw-bold mb-16 noto-tc-serif">此刻打盹，你將做夢；此刻學習，你將圓夢</h3>
+      <p class="fw-bold noto-tc-serif fs-md-18 fs-14">——我也不知道誰說的</p>
     </div>
 
     <!-- Modal -->
@@ -398,7 +398,7 @@
               您也可以先報名活動，日後再註冊帳號，<br>
               系統會在認證您的Email後，協助您找回舊的訂單。
             </p>
-            <button type="button" class="btn btn-primary mt-14 px-14 py-32 modal-btn rounded-0">立即成為會員</button>
+            <button type="button" class="btn btn-primary mt-14 px-14 py-12 modal-btn rounded-0">立即成為會員</button>
           </div>
         </div>
       </div>
