--- a/pages/index.html
+++ b/pages/index.html
@@ -256,7 +256,7 @@
     <!-- Albums跑馬燈 -->
 
     <!-- Albums -->
-    <div class="container2 albums mt-32 px-md-12 px-48 mx-auto">
+    <div class="container2 albums mt-md-32 px-md-12 px-48 mx-auto">
       <ul class="row list-unstyled">
         <li class="col-lg-3 col-md-6 col-12 mt-md-40 mt-16 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
@@ -312,7 +312,7 @@
     <!-- Albums跑馬燈 -->
 
     <!-- #Follow-us-->
-    <div class="container mt-md-60 mt-40  mx-auto">
+    <div class="container mt-md-60 mx-auto">
       <div class="row g-md-0 g-24">
         <div class="col-md-6 col-12">
           <div class="follow-us border border-2 border-primary">
