--- a/pages/index.html
+++ b/pages/index.html
@@ -20,9 +20,13 @@
       <div class="row">
         <div class="col-12">
           <div class="swiper mySwiper position-relative ">
-            <h2 class="position-absolute  mt-md-48 mt-16 ms-48 swiper-h2 text-white" style="z-index: 10000;">19 MAY <br class="d-md-none d-block"/> 2023</h2>
-            <h3 class="position-absolute  bottom-0 start-50 text-white translate-middle noto-tc-serif fw-bold mb-md-88 swiper-h3" style="z-index: 10000;">隔牆有耳-沒有草東的派對</h3>
-            <p class="position-absolute  d-md-block d-none bottom-0 start-50  text-white translate-middle mb-24 noto-tc-serif fs-16 text-center" style="z-index: 10000;width: 832px;">你各位聽團仔們！每次想跟朋友一起聽草東專場卻每一次都搶不到票？「草東沒有派對」永遠都是「草東沒有門票」！
+            <h2 class="position-absolute  mt-md-48 mt-16 ms-48 swiper-h2 text-white" style="z-index: 10000;">19 MAY <br
+                class="d-md-none d-block" /> 2023</h2>
+            <h3
+              class="position-absolute  bottom-0 start-50 text-white translate-middle noto-tc-serif fw-bold mb-md-88 swiper-h3"
+              style="z-index: 10000;">隔牆有耳-沒有草東的派對</h3>
+            <p class="position-absolute  d-md-block d-none bottom-0 start-50  text-white translate-middle mb-24 noto-tc-serif fs-16 text-center"
+              style="z-index: 10000;width: 832px;">你各位聽團仔們！每次想跟朋友一起聽草東專場卻每一次都搶不到票？「草東沒有派對」永遠都是「草東沒有門票」！
               帶上啤酒、野餐墊，讓我們在Live House外面一起開場「沒有草東的派對」吧！</p>
             <div class="swiper-wrapper">
               <div class="swiper-slide"><img src="/assets/images/event/13.jpg" alt="圖片1"></div>
@@ -79,7 +83,8 @@
           </a>
         </li>
         <li class="col-md-2 col-4">
-          <a href="/" class="category d-flex flex-column align-items-center justify-content-center gap-12 bg-primary hover-color-tertiary">
+          <a href="/"
+            class="category d-flex flex-column align-items-center justify-content-center gap-12 bg-primary hover-color-tertiary">
             <h3 class="fs-md-48 fs-24 text-secondary noto-tc-serif hover-color-tertiary">探索<br>更多</h3>
           </a>
         </li>
@@ -87,7 +92,8 @@
       <!-- Category -->
 
       <!-- Recent -->
-      <div class="border border-3 border-dark d-flex justify-content-between align-items-center py-md-24 py-16 px-md-32 px-12 mt-md-48 mt-32">
+      <div
+        class="border border-3 border-dark d-flex justify-content-between align-items-center py-md-24 py-16 px-md-32 px-12 mt-md-48 mt-32">
         <h2 class="h2-title">RECENT</h2>
         <p class="fw-bold noto-tc-serif p-info">近期活動</p>
       </div>
@@ -106,7 +112,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">社群活動</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -126,7 +133,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">演出</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -146,7 +154,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">聯誼</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -166,7 +175,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">遊戲競賽</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -186,7 +196,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">社群活動</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"> 
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -206,7 +217,8 @@
               <img class="recent-icon" src="/assets/images/sparkler.png" alt="sparkler">
               <span class="noto-tc-serif hover-text-decoration text-primary">展覽</span>
             </a>
-            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="#" class="d-flex align-items-center gap-4 hover-bg-yellow text-primary" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               <p class="fw-bold">開賣中</p>
               <i class="icofont-rounded-double-right"></i>
             </a>
@@ -217,7 +229,8 @@
       <!-- Recent -->
 
       <!-- ONLINE -->
-      <div class="border border-3 border-dark d-flex justify-content-between align-items-center px-md-32 px-12 py-md-24 py-16 mt-md-60 mt-32 ">
+      <div
+        class="border border-3 border-dark d-flex justify-content-between align-items-center px-md-32 px-12 py-md-24 py-16 mt-md-60 mt-32 ">
         <h2 class="h2-title">ONLINE</h2>
         <p class="fw-bold noto-tc-serif p-info">線上活動</p>
       </div>
@@ -246,11 +259,16 @@
     <!-- Albums跑馬燈 -->
     <div class="swiper myAlbumsSwiper mt-md-60 mt-32">
       <div class="swiper-wrapper">
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
       </div>
     </div>
     <!-- Albums跑馬燈 -->
@@ -302,11 +320,16 @@
     <!-- Albums跑馬燈 -->
     <div class="swiper myAlbumsSwiper mt-md-60 mt-40">
       <div class="swiper-wrapper">
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
-        <div class="swiper-slide noto-tc-serif py-md-24 py-16">活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
+        <div class="swiper-slide noto-tc-serif py-md-24 py-16">
+          活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・活動集錦・ALBUMS・</div>
       </div>
     </div>
     <!-- Albums跑馬燈 -->
@@ -316,7 +339,8 @@
       <div class="row g-md-0 g-24">
         <div class="col-md-6 col-12">
           <div class="follow-us border border-2 border-primary">
-            <h3 class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
+            <h3
+              class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
               #FOLLOW US</h3>
             <div class="p-32">
               <p>想第一時間獲得新奇有趣的活動資訊？<br>
@@ -324,19 +348,21 @@
                 也歡迎你聯繫我們，提供好玩有趣的活動企劃。</p>
               <ul class="list-unstyled mt-40">
                 <li class="mt-16">
-                  <a class="d-flex align-items-center text-dark" href="mailto:7tao.event@gmail.com">
+                  <a class="d-flex align-items-center text-dark hover-text-decoration"
+                    href="mailto:7tao.event@gmail.com">
                     <i class="icofont-ui-email fs-16 me-16 bg-primary p-8 text-white"></i>
                     <p class="noto-tc-sans">7tao.event@gmail.com</p>
                   </a>
                 </li>
                 <li class="mt-16">
-                  <a class="d-flex align-items-center text-dark" href="tel:09123123123">
+                  <a class="d-flex align-items-center text-dark hover-text-decoration" href="tel:09123123123">
                     <i class="icofont-phone fs-16 me-16 bg-primary p-8 text-white"></i>
                     <p class="noto-tc-sans">09123123123</p>
                   </a>
                 </li>
                 <li class="mt-16">
-                  <a class="d-flex align-items-center text-dark" href="https://www.facebook.com/7tao">
+                  <a class="d-flex align-items-center text-dark hover-text-decoration"
+                    href="https://www.facebook.com/7tao">
                     <i class="icofont-facebook fs-16 me-16 bg-primary p-8 text-white"></i>
                     <p class="noto-tc-sans">7TAO七逃</p>
                   </a>
@@ -347,18 +373,20 @@
         </div>
         <div class="col-md-6 col-12 d-flex flex-column justify-content-between subscribe-us">
           <div class="border border-2 border-primary flex-grow-1  pb-md-0 pb-16">
-            <h3 class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
+            <h3
+              class="fs-md-32 fs-24 noto-tc-serif text-uppercase fw-bold py-16 px-32 border-bottom border-2 border-primary">
               #subscribe us</h3>
-            <div class="px-32">
-              <p class="noto-tc-sans py-16">
-                訂閱電子報送折價券！<br>
-                定期精選文章資訊及最新優惠資訊，<br>
-                還不通通給我訂閱起來？
-              </p>
+            <form method="POST">
+              <div class="px-32">
+                <p class="noto-tc-sans py-16">
+                  訂閱電子報送折價券！<br>
+                  定期精選文章資訊及最新優惠資訊，<br>
+                  還不通通給我訂閱起來？
+                </p>
 
-              <input class="w-100 border border-2 border-primary form-control-lg subscribe-input" type="email" placeholder="輸入Email"
-                aria-label="輸入Email">
-            </div>
+                <input class="w-100 border border-2 border-primary form-control-lg subscribe-input form-control" type="email"
+                  placeholder="輸入Email" aria-label="輸入Email">
+              </div>
 
 
           </div>
@@ -366,6 +394,7 @@
             <span class="me-4">確認訂閱</span>
             <i class="icofont-rounded-double-right"></i>
           </button>
+          </form>
         </div>
       </div>
     </div>
