--- a/pages/index.html
+++ b/pages/index.html
@@ -20,8 +20,8 @@
       <div class="row">
         <div class="col-12">
           <div class="swiper mySwiper position-relative ">
-            <h2 class="position-absolute  mt-md-48 mt-16 ms-48 swiper-h2 text-white" style="z-index: 10000;">19 MAY <br
-                class="d-md-none d-block" /> 2023</h2>
+            <p class="position-absolute  mt-md-48 mt-16 ms-48 swiper-h2 text-white" style="z-index: 10000;">19 MAY <br
+                class="d-md-none d-block" /> 2023</p>
             <h3
               class="position-absolute  bottom-0 start-50 text-white translate-middle noto-tc-serif fw-bold mb-md-88 swiper-h3"
               style="z-index: 10000;">隔牆有耳-沒有草東的派對</h3>
@@ -50,7 +50,7 @@
         <li class="col-md-2 col-4">
           <a href="#"
             class="hover-text-yellow category text-primary d-flex flex-column align-items-center justify-content-center gap-12 border border-dark border-2">
-            <img src="/assets/images/cate01.svg" alt="演出" class="svg-icon">
+            <img src="/assets/images/cate01.svg" alt="演出">
             <h3 class="noto-tc-serif fw-bold fs-md-24 fs-16">演出</h3>
           </a>
         </li>
@@ -274,7 +274,7 @@
     <!-- Albums跑馬燈 -->
 
     <!-- Albums -->
-    <div class="container2 albums mt-md-32 px-md-12 px-48 mx-auto">
+    <div class="container albums mt-md-32 px-md-12 px-48 mx-auto">
       <ul class="row list-unstyled">
         <li class="col-lg-3 col-md-6 col-12 mt-md-40 mt-16 px-md-16">
           <div class="item border border-2 border-primary p-16 pb-48 position-relative">
@@ -408,7 +408,7 @@
     </div>
 
 
-    <div class="container border-top border-2 border-dark text-center mt-md-60 mt-48 py-md-60 py-48">
+    <div class="border-top border-2 border-dark text-center mt-md-60 mt-48 py-md-60 py-48">
       <h3 class="fs-md-32 fs-18 fw-bold mb-16 noto-tc-serif">此刻打盹，你將做夢；此刻學習，你將圓夢</h3>
       <p class="fw-bold noto-tc-serif fs-md-18 fs-14">——我也不知道誰說的</p>
     </div>
