--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
 
     </div>
     <!-- hamburgerMenu -->
-    <div class="container collapse position-absolute border-bottom border-2 border-dark bg-custom d-md-none  start-0 mx-0"
+    <div class="w-100 collapse position-absolute border-bottom border-2 border-dark bg-custom d-md-none  start-0 mx-0"
         id="hamburgerMenu" style="z-index: 10000;top:105%;">
         <ul class="list-unstyled bg-custom">
             <li class="mt-24 pt-0">
