--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
     <!-- hamburgerMenu -->
     <div class="w-100 collapse position-absolute border-bottom border-2 border-dark bg-custom d-md-none  start-0 mx-0"
         id="hamburgerMenu" style="z-index: 10000;top:105%;">
-        <ul class="list-unstyled bg-custom">
+        <ul class="list-unstyled bg-custom ps-12">
             <li class="mt-24 pt-0">
                 <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-red">
                     <i class="me-4 icofont-ui-file"></i>REGISTER
